// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders product 1`] = `
<div>
  <div
    class="details-page"
  >
    <div />
    <div
      class="item"
    >
      <h1
        class="item--title"
      >
        MOCK PRODUCT 1
      </h1>
      <div
        class="item--body"
      >
        <img
          class="item--picture"
          src="http://localhost:8080/image"
        />
        <div
          class="item--information"
        >
          <span>
             R$ 
            100
          </span>
          <p>
            <strong>
              Descrição:
            </strong>
            <br />
          </p>
        </div>
      </div>
    </div>
    <a>
      <img
        alt="Seta para retornar à página anterior"
        class="action-icon"
        src="left-arrow.svg"
      />
    </a>
  </div>
</div>
`;

exports[`renders snapshot while loading 1`] = `
<div>
  <div
    class="details-page"
  >
    <div>
      <div
        class="loading-container"
      >
        <div
          class="spinner"
        >
          <div
            class="petal"
            id="p1"
          />
          <div
            class="petal"
            id="p2"
          />
          <div
            class="petal"
            id="p3"
          />
          <div
            class="petal"
            id="p4"
          />
        </div>
        <span>
          Loading...
        </span>
      </div>
    </div>
    <a>
      <img
        alt="Seta para retornar à página anterior"
        class="action-icon"
        src="left-arrow.svg"
      />
    </a>
  </div>
</div>
`;
